--- a/package.json
+++ b/package.json
@@ -9,8 +9,15 @@
     "ios": "expo run:ios",
     "web": "expo start --web"
   },
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "listUnknownPackages": false
+      }
+    }
+  },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "expo": "~53.0.17",
     "expo-constants": "~17.1.7",
     "expo-dev-client": "~5.2.4",
@@ -19,6 +26,7 @@
     "expo-notifications": "~0.31.4",
     "expo-router": "~5.1.3",
     "expo-status-bar": "~2.2.3",
+    "expo-system-ui": "^5.0.10",
     "firebase": "^11.10.0",
     "react": "19.0.0",
     "react-native": "0.79.5",
