--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-router": "~5.1.3",
     "expo-status-bar": "~2.2.3",
     "expo-system-ui": "^5.0.10",
+    "expo-updates": "~0.28.17",
     "firebase": "^11.10.0",
     "react": "19.0.0",
     "react-native": "0.79.5",
