--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-dev-client": "~5.2.4",
     "expo-device": "~7.1.4",
     "expo-linking": "~7.1.7",
+    "expo-network": "~7.1.5",
     "expo-notifications": "~0.31.4",
     "expo-router": "~5.1.3",
     "expo-status-bar": "~2.2.3",
