--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@ EXPO_PUBLIC_FIREBASE_STORAGE_BUCKET=your-app.appspot.com
 EXPO_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=123...
 EXPO_PUBLIC_FIREBASE_APP_ID=1:123...:web:abc...
 EXPO_PUBLIC_FIREBASE_MEASUREMENT_ID=...
+NODE_ENV=development # change to production when building for production
