Add PIN settings

--- a/.env.example
+++ b/.env.example
@@ -5,4 +5,5 @@ EXPO_PUBLIC_FIREBASE_STORAGE_BUCKET=your-app.appspot.com
 EXPO_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=123...
 EXPO_PUBLIC_FIREBASE_APP_ID=1:123...:web:abc...
 EXPO_PUBLIC_FIREBASE_MEASUREMENT_ID=...
+EXPO_PUBLIC_PIN_ENCRYPTION_KEY=your_encryption_key
 NODE_ENV=development # change to production when building for production
