--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     }
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.1",
     "@react-native-async-storage/async-storage": "2.1.2",
+    "crypto-es": "^3.0.0",
     "expo": "~53.0.17",
     "expo-constants": "~17.1.7",
     "expo-dev-client": "~5.2.4",
@@ -31,11 +33,15 @@
     "expo-updates": "~0.28.17",
     "firebase": "^11.10.0",
     "react": "19.0.0",
+    "react-hook-form": "^7.62.0",
     "react-native": "0.79.5",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-get-random-values": "~1.11.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1"
+    "react-native-screens": "~4.11.1",
+    "zod": "^4.0.14",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
