--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
+    "react-native-toast-message": "^2.3.3",
     "zod": "^4.0.14",
     "zustand": "^5.0.7"
   },
