--- a/package.json
+++ b/package.json
@@ -18,38 +18,40 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
-    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/datetimepicker": "^8.4.4",
     "crypto-es": "^3.0.0",
-    "expo": "~53.0.17",
-    "expo-constants": "~17.1.7",
-    "expo-dev-client": "~5.2.4",
-    "expo-device": "~7.1.4",
-    "expo-linking": "~7.1.7",
-    "expo-network": "~7.1.5",
-    "expo-notifications": "~0.31.4",
-    "expo-router": "~5.1.3",
-    "expo-status-bar": "~2.2.3",
-    "expo-system-ui": "^5.0.10",
-    "expo-updates": "~0.28.17",
+    "expo": "^54.0.2",
+    "expo-constants": "~18.0.8",
+    "expo-dev-client": "~6.0.12",
+    "expo-device": "~8.0.7",
+    "expo-linking": "~8.0.8",
+    "expo-network": "~8.0.7",
+    "expo-notifications": "~0.32.11",
+    "expo-router": "~6.0.1",
+    "expo-status-bar": "~3.0.8",
+    "expo-system-ui": "~6.0.7",
+    "expo-updates": "~29.0.10",
     "firebase": "^11.10.0",
-    "react": "19.0.0",
+    "react": "19.1.0",
+    "react-dom": "^19.1.0",
     "react-hook-form": "^7.62.0",
-    "react-native": "0.79.5",
+    "react-native": "0.81.4",
     "react-native-draggable-flatlist": "^4.0.3",
-    "react-native-gesture-handler": "~2.24.0",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-get-random-values": "~1.11.0",
-    "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
+    "react-native-reanimated": "~4.1.0",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
     "react-native-toast-message": "^2.3.3",
     "zod": "^4.0.14",
-    "zustand": "^5.0.7"
+    "zustand": "^5.0.7",
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "~19.0.10",
-    "typescript": "~5.8.3"
+    "@types/react": "~19.1.10",
+    "typescript": "~5.9.2"
   },
   "private": true
 }
