--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "expo-system-ui": "~6.0.7",
     "expo-updates": "~29.0.10",
     "firebase": "^11.10.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
     "react-native": "0.81.4",
     "react-native-draggable-flatlist": "^4.0.3",
@@ -46,12 +46,12 @@
     "react-native-toast-message": "^2.3.3",
     "react-native-worklets": "0.5.1",
     "zod": "^4.0.14",
-    "zustand": "^5.0.7"
+    "zustand": "^5.0.7",
+    "@expo/metro-runtime": "~6.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.1.10",
-    "eas-cli": "^16.19.1",
     "typescript": "~5.9.2"
   },
   "private": true
