--- a/eas.json
+++ b/eas.json
@@ -6,15 +6,22 @@
   "build": {
     "development": {
       "developmentClient": true,
-      "distribution": "internal"
+      "distribution": "internal",
+      "android": { "buildType": "apk" },
+      "env": {
+        "APP_ENV": "development"
+      }
     },
     "preview": {
       "distribution": "internal"
     },
     "production": {
       "autoIncrement": true,
+      "env": {
+        "APP_ENV": "production"
+      },
       "android": {
-        "buildType": "apk",
+        "buildType": "app-bundle",
         "distribution": "store"
       }
     }
