--- a/package.json
+++ b/package.json
@@ -17,22 +17,23 @@
     }
   },
   "dependencies": {
+    "@expo/metro-runtime": "~6.1.2",
     "@hookform/resolvers": "^5.2.1",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/datetimepicker": "^8.4.4",
-    "crypto-es": "^3.0.0",
-    "expo": "^54.0.2",
+    "crypto-es": "^3.1.2",
+    "expo": "54.0.7",
     "expo-constants": "~18.0.8",
     "expo-dev-client": "~6.0.12",
     "expo-device": "~8.0.7",
     "expo-linking": "~8.0.8",
     "expo-network": "~8.0.7",
     "expo-notifications": "~0.32.11",
-    "expo-router": "~6.0.1",
+    "expo-router": "~6.0.4",
     "expo-status-bar": "~3.0.8",
     "expo-system-ui": "~6.0.7",
     "expo-updates": "~29.0.10",
-    "firebase": "^11.10.0",
+    "firebase": "^12.2.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
@@ -46,8 +47,7 @@
     "react-native-toast-message": "^2.3.3",
     "react-native-worklets": "0.5.1",
     "zod": "^4.0.14",
-    "zustand": "^5.0.7",
-    "@expo/metro-runtime": "~6.1.2"
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
