--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@expo/metro-runtime": "~6.1.2",
     "@hookform/resolvers": "^5.2.1",
     "@react-native-async-storage/async-storage": "2.2.0",
-    "@react-native-community/datetimepicker": "^8.4.4",
+    "@react-native-community/datetimepicker": "8.4.4",
     "crypto-es": "^3.1.2",
     "expo": "54.0.7",
     "expo-constants": "~18.0.8",
@@ -29,7 +29,7 @@
     "expo-linking": "~8.0.8",
     "expo-network": "~8.0.7",
     "expo-notifications": "~0.32.11",
-    "expo-router": "~6.0.4",
+    "expo-router": "~6.0.5",
     "expo-status-bar": "~3.0.8",
     "expo-system-ui": "~6.0.7",
     "expo-updates": "~29.0.10",
