--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/datetimepicker": "8.4.4",
     "crypto-es": "^3.1.2",
-    "expo": "54.0.7",
+    "expo": "^54.0.7",
     "expo-constants": "~18.0.8",
     "expo-dev-client": "~6.0.12",
     "expo-device": "~8.0.7",
@@ -45,6 +45,7 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-toast-message": "^2.3.3",
+    "react-native-web": "^0.21.0",
     "react-native-worklets": "0.5.1",
     "zod": "^4.0.14",
     "zustand": "^5.0.7"
